# PavlovServerBrowser

./: Cargo.toml  README.md  index.html  styles.css
.github/workflows/: deploy.yml
src/: known_versions.rs  lib.rs
